--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>El Nelsonn</title>
+    <link rel="icon" href="images/senal-de-advertencia.png" type="image/png">
+    <link rel="stylesheet" href="style/index-style.css">
+    
+</head>
+
+
+<body>
+
+    <div class="box">
+
+
+        <h2 class="toptitle sixtyfour-convergence-lettermain">ERROR 404</h2>
+
+        <h1>
+            <a href="nelson.html" class="sixtyfour-convergence-lettermain title">El Nelsonn</a>
+        </h1>
+
+        <h2 class="subtitle sixtyfour-convergence-lettermain">Web Page</h2>
+
+    </div>
+
+
+
+</body>
+</html> 
