--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <link rel="icon" href="images/senal-de-advertencia.png" type="image/png">
     <link rel="stylesheet" href="style/index-style.css">
     
+    
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S8K9R4PNEN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S8K9R4PNEN');
+</script>
 
 <body>
 
